fixed aside, section and alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ body {
 }
 .nav-links li{
     display: inline-block;
-    margin: 0 15px
+    margin: 0 15px;
 }
 
 .header h1 .seo {
@@ -61,12 +61,19 @@ p {
 }
 
 #hero {
-    height: 100%;
+    height: 50%;
     width: 100%;
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative
+}
+main{
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
 }
 
 .float-left {
@@ -80,36 +87,28 @@ p {
 }
 
 .content {
-    width: 75%;
-    display: inline-block;
+    width: 50%;
+    display: grid;
     margin-left: 20px;
 }
 
-.benefits {
+aside {
     margin-right: 20px;
     padding: 20px;
-    clear: both;
+    clear: none;
     float: right;
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
+    background-color: #1195db;
 }
 
-.benefit-lead {
+section {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
 
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
 
 .benefit-lead h3 {
     margin-bottom: 10px;
